workspace-sf/force-app/main/default/objects/InformacaoOferta__c/InformacaoOferta__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as informações das ofertas.</description>
    <label>Informação da Oferta</label>
    <nameField>
        <label>Informação da Oferta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Informação da Oferta</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>