workspace-sf/force-app/main/default/objects/InformacaoOferta__c/fields/ConjuntoInformacoes__c.field-meta.xml
<CustomField>
    <fullName>ConjuntoInformacoes__c</fullName>
    <label>Conjunto de Informações</label>
    <referenceTo>ConjuntoInformacoes__c</referenceTo>
    <relationshipLabel>Informação da Oferta</relationshipLabel>
    <relationshipName>InformacaoOferta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>