workspace-sf/force-app/main/default/objects/InformacaoOferta__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descricão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>