workspace-sf/force-app/main/default/objects/InformacaoOferta__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <inlineHelpText>Cadastre como &apos;TIPO_VIAGEM&apos; para definir a oferta como um produto VIAGEM</inlineHelpText>
    <label>Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>