workspace-sf/force-app/main/default/objects/InformacaoOferta__c/fields/tipo__c.field-meta.xml
<CustomField>
    <fullName>tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Texto</fullName>
            </value>
            <value>
                <fullName>Número inteiro</fullName>
            </value>
            <value>
                <fullName>Opções fixas</fullName>
            </value>
            <value>
                <fullName>Opções de servico</fullName>
            </value>
            <value>
                <fullName>CPF</fullName>
            </value>
            <value>
                <fullName>CNPJ</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>CEP</fullName>
            </value>
            <value>
                <fullName>Monetário</fullName>
            </value>
            <value>
                <fullName>Booleano</fullName>
            </value>
            <value>
                <fullName>DataCalendario</fullName>
                <label>Data Calendario</label>
            </value>
            <value>
                <fullName>Opção fixa painel</fullName>
            </value>
            <value>
                <fullName>Radiobutton</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>